# finance_analysis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.web  README.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
.github/: copilot-instructions.md
alembic/: env.py
api/: app.py  deps.py
bot/: __init__.py  dispatcher.py  handler.py
data/: README.md
data_provider/: __init__.py  akshare_fetcher.py  base.py  codes.py  config.py  efinance_fetcher.py  errors.py  longbridge_calendar_fetcher.py  longbridge_fetcher.py  longbridge_news_fetcher.py  test.py  tushare_fetcher.py  yfinance_fetcher.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DEPLOY.md  DEPLOY_EN.md  FAQ.md  FAQ_EN.md  LLM_CONFIG_GUIDE.md  LLM_CONFIG_GUIDE_EN.md  MIGRATIONS.md  backtests.md  deploy-webui-cloud.md  full-guide.md  full-guide_EN.md  market-streamer.md  quant-research.md  settings-help.md
pr-code/: py_compile.py
qlib_worker/: Dockerfile  __init__.py  app.py  celery_app.py  config.py  price_modes.py  protocol.py  pyproject.toml
qlib_worker/artifacts/: __init__.py  store.py
qlib_worker/datasets/: __init__.py  loader.py  validator.py
qlib_worker/models/: __init__.py  base.py  cross_section.py  metrics.py  registry.py  splits.py  targets.py  time_series.py  training.py
qlib_worker/tasks/: __init__.py  artifact.py  predict.py  train.py
qlib_worker/tests/: test_alpha158_vwap.py  test_celery_routing.py  test_protocol_models_artifacts.py  test_training_integration.py
scripts/: build-backend-macos.sh  check_static_assets.py  ci_gate.sh  deploy_prod.sh  docker_path_smoke.py  fix_imports.py  fix_test_patches.py  generate_index_from_csv.py  generate_stock_index.py  migrate_to_finance_analysis.py  start_celery_beat.sh
src/: analyzer.py  auth.py  config.py  db_migrations.py  db_schema.py  llm_client.py  logging_config.py  market_analyzer.py  market_review_models.py  md2img.py  notification.py  notification_config.py  notification_reports.py  notification_routing.py  report_config.py  runtime_config.py  scheduler.py  search_service.py  stock_analyzer.py  storage.py  time_utils.py  webui_frontend.py
strategies/: bottom_volume.yaml
tests/: __init__.py  longbridge_live_smoke.py  task_repo_fakes.py  test_a_share_intraday_analysis.py  test_a_share_intraday_data_source.py  test_a_share_intraday_rules.py  test_a_share_pre_close_review.py  test_a_share_price_limits.py  test_agent_executor.py  test_agent_frozen_context.py  test_agent_models_api.py  test_agent_orchestrator_sniper_fallback.py  test_agent_pipeline.py  test_agent_registry.py  test_agent_skills_paths.py  test_agent_sse_cleanup.py  test_akshare_realtime_logging.py  test_analysis_api_contract.py  test_analysis_history.py  test_analysis_integration.py  test_analysis_metadata.py  test_analyzer_news_prompt.py  test_anspire_search.py  test_api_app_cors.py  test_api_static_paths.py  (+158 more)
(+903 files in other folders)
