[project]
name = "finance_analysis"
version = "0.0.0"
description = "Finance Analysis"
requires-python = ">=3.13,<3.14"
dependencies = [
    "akshare>=1.18.0",
    "apscheduler>=3.10.0,<4.0.0",
    "baostock>=0.8.0",
    "efinance>=0.5.5",
    "exchange-calendars>=4.5.0",
    "fake-useragent>=1.4.0",
    "fastapi>=0.136.0",
    "google-search-results>=2.4.0",
    "httpx[socks]>=0.28.1",
    "imgkit>=1.2.0",
    "jinja2>=3.1.0",
    "json-repair>=0.55.1",
    "litellm!=1.82.7,!=1.82.8,>=1.83.0,<2.0.0",
    "longbridge>=0.2.0",
    "lxml-html-clean>=0.4.4",
    "markdown2>=2.4.0",
    "newspaper3k>=0.2.8",
    "numpy>=2.0.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "pypinyin>=0.50.0",
    "pytdx>=1.72",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.40",
    "alembic>=1.14.0",
    "tavily-python>=0.3.0",
    "tenacity>=8.2.0",
    "tickflow>=0.1.0",
    "tiktoken>=0.8.0",
    "tushare>=1.4.0",
    "uvicorn[standard]>=0.34.0",
    "yfinance>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "flake8",
    "pytest",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".env", "venv", ".venv"]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]  # assert 语句在测试中是允许的
