[project]
name = "finance-analysis-qlib-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery[redis]>=5.6.0,<6.0.0",
    "joblib>=1.5.0,<2.0.0",
    "lightgbm>=4.6.0,<5.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=20.0.0,<24.0.0",
    "pyqlib==0.9.7",
    "scikit-learn>=1.7.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["qlib_worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
